# pywechat

./: .gitignore  Errors.py  QuickStart.md  README(3.9).MD  README.md  Uielements.py  WeChatAuto.py  WeChatTools.py  Weixin4.0.md  WinSettings.py  __init__.py  feature_list.md  features_list.md  pyweixin操作手册.docx  pywinauto使用方法.ipynb  requirements.txt  setup.py  test4.ipynb  utils.py  ~$weixin操作手册.docx  微信4.0 UI自动化.md
Mcp/: pyproject.toml
Mcp/pyweixin_rpa/mcp_server/: server.py
Mcp/pyweixin_rpa/mcp_server/tools/: messaging.py
Mcp/pyweixin_rpa/pyweixin/: WeChatTools.py
Skill/OpenClaw/pyweixin-rpa/references/: api_reference.md
Skill/OpenClaw/pyweixin-rpa/scripts/: check_visibility.py
Skill/OpenClaw/pyweixin-rpa/scripts/pyweixin/: Notes2MD.py  Uielements.py  WeChatAuto.py  WeChatTools.py  __init__.py
Skill/OtherPlatforms/: pyweixin-rpa.skill
Skill/OtherPlatforms/pyweixin-rpa/: SKILL.md
Skill/OtherPlatforms/pyweixin-rpa/references/: Weixin4.0.md  api_reference.md
Skill/OtherPlatforms/pyweixin-rpa/scripts/: check_requirements.py  requirements.txt
Skill/OtherPlatforms/pyweixin-rpa/scripts/pyweixin/: Uielements.py  WeChatTools.py  WinSettings.py
pywechat/: Errors.py  WechatAuto.py  WechatTools.py  WinSettings.py  __init__.py
pyweixin/: Config.py  Errors.py  Uielements.py  Warnings.py  WeChatAuto.py  WeChatTools.py  WechatTools.py  WinSettings.py  __init__.py  utils.py
skills/openclaw/pyweixin-rpa/: SKILL.md  metadata.openclaw.yaml
skills/openclaw/pyweixin-rpa/references/: api_reference.md
skills/openclaw/pyweixin-rpa/scripts/: check_requirements.py  check_running_state.py
skills/openclaw/pyweixin-rpa/scripts/pyweixin/: Uielements.py  WeChatAuto.py  WeChatTools.py  WinSettings.py  utils.py
src/: README.md  pyproject.toml  setup.py
src/pyweixin/: Notes2MD.py  Uielements.py  WeChatAuto.py  WeChatTools.py  WinSettings.py  utils.py
